--- a/templates/base.html
+++ b/templates/base.html
@@ -22,12 +22,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
+                <!-- Generator Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('generator') }}">Generator</a>
                 </li>
+                <!-- Pricing Link (Newly Added) -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('pricing') }}">Pricing</a>
+                </li>
+                <!-- About Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('about') }}">About</a>
                 </li>
+                <!-- Authentication Links -->
                 {% if current_user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
