--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('generator') }}">Generator</a>
                 </li>
-                <!-- Pricing Link (Newly Added) -->
+                <!-- Pricing Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('pricing') }}">Pricing</a>
                 </li>
@@ -34,12 +34,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('about') }}">About</a>
                 </li>
-                <!-- Authentication Links -->
                 {% if current_user.is_authenticated %}
+                <!-- My Account Link, only shown to authenticated users -->
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('my_account') }}">My Account</a>
+                </li>
+                <!-- Log Out Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
                 </li>
                 {% else %}
+                <!-- Login/Sign Up Link -->
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('login') }}">Login/Sign Up</a>
                 </li>
